# micropython-midi-controller-gen-1

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  boardman.yaml  pyproject.toml  setup.cfg
src/: app.py  config.py  main.py
src/bank_profiles/: digitech_whammy_5.py  line6_hx_stomp.py
src/banks/: digitech_whammy_5.py  line6_hx_stomp.py
src/common/: action_executors.py  bank_managers.py  boards.py  buttons.py  command_executors.py  midis.py  rgb_led_strips.py  tools.py
src/common/function_catalogs/: base.py  fc_bank_manager.py  fc_led.py  fc_midi.py  fc_rgbled.py  fc_rgbledstrip.py  fc_time.py
src/lib/: picozero.py
tools/boardman/: cli.py  cmd_collect.py  cmd_detect.py  cmd_mpy_compile.py  cmd_reset.py  cmd_upload.py  entities.py  tools.py
