[tool.poetry]
name = "midi-controller-2-buttons-v1"
version = "0.1.0"
description = ""
authors = ["Igor Melnyk <liminspace@gmail.com>"]
readme = "README.md"
#packages = [{include = "midi_controller_2_buttons_v1"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
adafruit-ampy = "<1.1"
docopt = "<0.7"
freezegun = "^1.2.2"
pre-commit = "^2.20.0"
pydantic = "^1.10.2"
pyserial = "<4.0"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 108
py_version = 39

[tool.black]
line-length = 108
target-version = ["py39"]
