[tool.poetry]
name = "midi-controller-2-buttons-v1"
version = "0.1.0"
description = ""
authors = ["Igor Melnyk <liminspace@gmail.com>"]
readme = "README.md"
#packages = [{include = "midi_controller_2_buttons_v1"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"
boardman = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 108
py_version = 39

[tool.black]
line-length = 108
target-version = ["py39"]
